ipc/ipdl/test/ipdl/ok/maybe_Basic.ipdl
protocol maybe_Basic {
child:
    async Msg(int? maybe);
};
