ipc/ipdl/test/ipdl/error/maybe_SelfRecUnion.ipdl
//error: union `X' is only partially defined

union X { X?; };

protocol maybe_SelfRecUnion {
child: async Msg(X? aa);
};
